--- a/InterviewApp/pom.xml
+++ b/InterviewApp/pom.xml
@@ -105,6 +105,26 @@
 	    <version>1.7.25</version>
 	</dependency>
     
+    <!-- database -->
+   <dependency>
+	    <groupId>postgresql</groupId>
+	    <artifactId>postgresql</artifactId>
+	    <version>9.1-901.jdbc4</version>
+	</dependency>
+
+    
+    <dependency>
+	    <groupId>javax.persistence</groupId>
+	    <artifactId>persistence-api</artifactId>
+	    <version>1.0.2</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.eclipse.persistence</groupId>
+	    <artifactId>org.eclipse.persistence.jpa</artifactId>
+	    <version>2.6.0</version>
+	</dependency>
+    
   </dependencies>
   
   <build>
