--- a/InterviewApp/pom.xml
+++ b/InterviewApp/pom.xml
@@ -114,16 +114,16 @@
 
     
     <dependency>
-	    <groupId>javax.persistence</groupId>
-	    <artifactId>persistence-api</artifactId>
-	    <version>1.0.2</version>
+	    <groupId>org.hibernate.javax.persistence</groupId>
+	    <artifactId>hibernate-jpa-2.0-api</artifactId>
+	    <version>1.0.1.Final</version>
 	</dependency>
 	
-	<dependency>
-	    <groupId>org.eclipse.persistence</groupId>
-	    <artifactId>org.eclipse.persistence.jpa</artifactId>
-	    <version>2.6.0</version>
-	</dependency>
+	 <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>4.2.8.Final</version>
+     </dependency>
     
   </dependencies>
   
