--- a/InterviewApp/pom.xml
+++ b/InterviewApp/pom.xml
@@ -124,7 +124,25 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>4.2.8.Final</version>
      </dependency>
+     
+     <!-- guice DI -->
+	<dependency>
+	  <groupId>com.google.inject</groupId>
+	  <artifactId>guice</artifactId>
+	  <version>4.0</version>
+	</dependency>
+	    
+	<dependency>
+        <groupId>com.google.inject.extensions</groupId>
+        <artifactId>guice-servlet</artifactId>
+        <version>4.0</version>
+    </dependency>
     
+    <dependency>
+        <groupId>com.squarespace.jersey2-guice</groupId>
+        <artifactId>jersey2-guice</artifactId>
+        <version>0.10</version>
+    </dependency>    
   </dependencies>
   
   <build>
